# DAG_Compression

./: .gitignore  CMakeLists.txt  DAG-example.sln  DAG-example.vcxproj  DAG-example.vcxproj.filters  README.md  Tracy.lnk  bits_in_uint_array.h  hash.h  packages.config
DAG/: CMakeLists.txt  DAG.cpp  DAG.h
DAG/DAG/: DAG.cpp
DAGConstructor/: CMakeLists.txt  Dagifier.cu  Dagifier.h
DAGExample/: CMakeLists.txt  CudaHelpers.h  bits_in_uint_array.h  hash.h  morton.h
DAGExample/ColorCompression/: CMakeLists.txt
DAGExample/ColorCompression/ColorCompression/: BlockBuild.h  ours.cpp  ours.cu  ours.h  ours_varbit.cpp  ours_varbit.h  svd.cpp  svd.h
DAGExample/DAG/: CMakeLists.txt
DAGExample/DAG/DAG/: DAG.cpp  DAG.h
DAGExample/DAGConstructor/: CMakeLists.txt
DAGExample/DAGConstructor/DAGConstructor/: DAGConstructor.cu  DAGConstructor.h  Merger.cpp  Merger.h
DAGExample/DAGLoader/: CMakeLists.txt
DAGExample/DAGLoader/DAGLoader/: DAGLoader.cpp  DAGLoader.h
DAGExample/DAGTracer/: CMakeLists.txt
DAGExample/DAGTracer/DAGTracer/: DAGTracer.cu  DAGTracer.h
DAGExample/Voxelizer/: CMakeLists.txt
DAGExample/Voxelizer/Voxelizer/: Voxelizer.cpp  Voxelizer.h  voxelize.frag  voxelize.geom  voxelize.vert
DAGExample/glTFLoader/: CMakeLists.txt
DAGExample/glTFLoader/glTFLoader/: glTFLoader.cpp  glTFLoader.h
DAGExample/src/: my_exe.cpp  voxelize_and_merge.cpp  voxelize_and_merge.h
DAGExample/utils/: CMakeLists.txt
DAGExample/utils/utils/: Aabb.cpp  Aabb.h  glm_extensions.cpp  glm_extensions.h  orientation.cpp  orientation.h
DAGLoader/: CMakeLists.txt  DAGCerealizer.cpp  DAGCerealizer.h
DAGTracer/: CMakeLists.txt  DAGTracer.cu  DAGTracer.h
DAGTracer/DAGTracer/: DAGTracer.cu  DAGTracer.h
assets/EpicCitadel/glTF/: EpicCitadel.gltf
src/: my_exe.cpp
utils/: CMakeLists.txt  glm_extensions.cpp  view.cpp  view.h
